[package]
name = "markdown"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
actix-files = "0.6"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tera = "1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
notify = "6.0"
